--- a/my-website-app/public/index.html
+++ b/my-website-app/public/index.html
@@ -23,8 +23,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-
     <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Montserrat&display=swap" rel="stylesheet">
+    <script type="text/javascript"  src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
     <script src="https://kit.fontawesome.com/80c46885ed.js"></script>
     <title>MyWebsite</title>
   </head>
