modified some styles from aboutme and projects compos

--- a/my-website-app/public/index.html
+++ b/my-website-app/public/index.html
@@ -26,7 +26,7 @@
     <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Montserrat&display=swap" rel="stylesheet">
     <script type="text/javascript"  src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
     <script src="https://kit.fontawesome.com/80c46885ed.js"></script>
-    <title>MyWebsite</title>
+    <title>Adri Campo · Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
