projects modified to have 2 links, one to the webpage and another to the code in github

--- a/my-website-app/public/index.html
+++ b/my-website-app/public/index.html
@@ -24,6 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
     <script type="text/javascript"  src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
     <script src="https://kit.fontawesome.com/80c46885ed.js"></script>
     <title>Adri Campo · Portfolio</title>
