portfolio component modified, restructured header with a hamburguer menu

--- a/my-website-app/public/index.html
+++ b/my-website-app/public/index.html
@@ -25,6 +25,7 @@
     -->
     <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <script type="text/javascript"  src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
     <script src="https://kit.fontawesome.com/80c46885ed.js"></script>
     <title>Adri Campo · Portfolio</title>
